--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>着せ替えサイト</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<div id="character">
+  <img src="images/body.png" class="layer">
+  <img src="images/dress.png" class="layer">
+</div>
+
+</body>
+</html>
