--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 <div id="character">
   <img src="images/body.png" class="layer">
-  <img src="images/dress.png" class="layer">
+  <img id="dress" src="images/dress.png" class="layer">
 </div>
-
+<button onclick="toggleDress()">服を着せる / 脱がせる</button>
+  
+<script src="script.js"></script>
 </body>
 </html>
